# newworld

./: .gitignore  CLAUDE.md  LICENSE  README.md  STYLE_GUIDE.md  requirements.txt
.claude/agents/: aws-expert-advisor.md  code-reviewer.md
docs/: discord_cmd.json
invasions/: .coverage  .env  .pre-commit-config.yaml  README.md  config.toml  deploy.sh  pyproject.toml  pytest.ini  requirements.txt  samconfig.toml  template.yaml
invasions/.aws-sam/: build.toml  sync.toml
invasions/.aws-sam/auto-dependency-layer/: adl_nested_template.yaml  template.yaml
invasions/.aws-sam/auto-dependency-layer/InvasionScan/: app.py  samconfig.toml  template.yaml
invasions/.aws-sam/auto-dependency-layer/InvasionScanba3701b7DepLayer/: AWS_SAM_CLI_README
invasions/api/: 20240510.yaml  20240513.yaml  20240513b.yaml
invasions/discord/: commands.yaml  register.py
invasions/scripts/: setup-ssm-parameters.py
invasions/scripts/dynamodb/: table-copy.py
invasions/scripts/image_processing/: README.md  test_image_processing.py
invasions/src/: STYLE_GUIDE.md  config.py  deploy_config.py  invasion.py  ladder.py  report.py  storage.py
invasions/src/board/: board.py
invasions/src/bot/: bot.py  bot_invasion.py  bot_member.py  bot_reports.py  requirements.txt
invasions/src/download/: download.py  test.json
invasions/src/invasion/: invasion.py  requirements.txt
invasions/src/irus/: irus.py
invasions/src/ladder/: ladder.py
invasions/src/ladder_async/: ladder_async.py
invasions/src/layer/: Invasion.py  __init__.py
invasions/src/layer/demo/: demo.py  requirements.txt
invasions/src/layer/irus/: __init__.py  container.py  env.py  environ.py  imageprep.py  invasion.py  invasion_legacy_backup.py  invasionlist.py  ladder.py  ladderrank.py  member.py  member_legacy_backup.py  memberlist.py  month.py  old.py  posttable.py  process.py  report.py  utilities.py
invasions/src/layer/irus/models/: __init__.py  invasion.py  ladder.py  ladderrank.py  member.py
invasions/src/layer/irus/repositories/: __init__.py  base.py  invasion.py  ladder.py  ladderrank.py  member.py
invasions/src/layer/irus/services/: __init__.py  discord_messaging.py  image_processing.py  member_management.py
invasions/src/layer/tests/: __init__.py  delete_items.py  pytest.ini  test_irus_invasion.py  test_irus_invasionlist.py  test_irus_ladder.py  test_irus_ladderrank.py  test_irus_member.py  test_irus_memberlist.py  test_irus_month.py  test_irus_report.py  test_process.py
invasions/src/members/: members.py
invasions/src/month/: month.py
invasions/src/process/: process.py
invasions/src/reports/: reports.py
invasions/step/: board.json  deadhand.json  downloader.json  posttable.json  process.json
invasions/tests/: __init__.py  conftest.py  lambdaclient.py  local.py  old_download.py  old_ladder.py  test_collection_services.py  test_container.py  test_discord_messaging_service.py  test_download.py  test_image_processing_service.py  test_invasion.py  test_ladder.py  test_ladder_facade.py  test_ladderrank_facade.py  test_member_facade.py  test_member_management_service.py  test_memberlist_service.py  test_models_invasion.py  test_models_ladder.py  test_models_ladderrank.py  test_models_member.py  test_modern_setup.py  test_month.py  test_month_service.py  test_process.py  test_process_service.py  test_report_service.py  test_repositories_invasion.py  test_repositories_ladder.py  test_repositories_ladderrank.py  test_repositories_member.py
invasions/tests/integration/: README.md  conftest.py  test_container_integration.py  test_dynamodb_integration.py  test_invasion_repository_integration.py  test_member_management_service_integration.py  test_member_repository_integration.py  test_s3_integration.py
invasions/tests/legacy/: __init__.py  lambdaclient.py  test_invasion.py  test_month.py  test_process.py
invasions/tests/legacy/layer/: delete_items.py  test_irus_invasion.py  test_irus_invasionlist.py  test_irus_ladder.py  test_irus_ladderrank.py  test_irus_member.py  test_irus_memberlist.py  test_irus_month.py  test_irus_report.py
invasions/tests/utilities/: __init__.py  cleanup_test_data.py  production_data_copier.py
projects/: 01-tooling-modernization.md  02-environment-resource-naming.md  03-code-quality-foundation.md  04-test-coverage-expansion.md  05-integration-testing-expansion.md  06-comprehensive-modernization.md  project-template.md
tests/: STYLE_GUIDE.md
web/: amplify.yml  index.html  package-lock.json  package.json
